# rizo

./: .gitignore  AGENTS.md  CLAUDE.md  HOW-TO-compile.md  NEXT.md  PLAN.md  README.md  ideas.md  index.html  package-lock.json  package.json  phase-1.md  phase-2.md  phase-3.md  vite.config.js
src/: main.js  settings.js  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
