[package]
name = "xterm-rust"
version = "0.1.0"
edition = "2021"

[dependencies]
tauri = { version = "2", features = [] }
portable-pty = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[profile.release]
strip = true
lto = true
codegen-units = 1
